chore: commit updated repository structure

--- a/package.json
+++ b/package.json
@@ -53,8 +53,5 @@
   "version": "1.0.0",
   "description": "A modular tool to extract Color Palettes out of an Images Pixelarray",
   "author": "Dominik Strangas",
-  "private": false,
-  "dependencies": {
-    "rgb-to-hsl": "^0.0.3"
-  }
+  "private": false
 }
