chore: set package name to colrjs

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
       "--experimental-specifier-resolution=node"
     ]
   },
-  "name": "colrjs2",
+  "name": "colrjs",
   "version": "1.0.0",
   "description": "A modular tool to extract Color Palettes out of an Images Pixelarray",
   "author": "Dominik Strangas",
