--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@commitlint/config-conventional": "^17.3.0",
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.2",
     "@types/node": "^18.11.9",
     "alex": "^11.0.0",
     "ava": "^5.1.0",
